--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     alt="Artist logo"
                   />
                 </a>
-                <a href="https://dalilahannouche.wixsite.com/portfolio">
+                <a href="https://dalicode.dev">
                   <img
                     src="./assets/socials/PortfolioLogo.png"
                     alt="Portfolio logo"
@@ -115,7 +115,7 @@
                     alt="Fiverr logo"
                   />
                 </a>
-                <a href="https://www.linkedin.com/in/dalila-h-8a6896143/">
+                <a href="https://www.linkedin.com/in/dalilahannouche/">
                   <img
                     src="./assets/socials/LinkedinLogo.png"
                     alt="Linkedin logo"
